# cleansrt

./: Cargo.toml  README.md  removetheseexample.txt
src/: main.rs
