[package]
name = "cleansrt"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
srtlib = "0.2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"