[package]
name = "cleansrt"
version = "1.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
indicatif = "0.17.11"
log = "0.4.27"
srtlib = "0.2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
